cabal-version:       2.4
name:                AoC2015-Haskell
version:             0.0.0.0
synopsis:            Advent of Code 2015 using Haskell
description:         Advent of Code 2015 using Haskell
license:             MIT
license-file:        LICENSE
author:              Theo Garefalakis
maintainer:          Theo Garefalakis <tgaref@gmail.com>
copyright:           2021 Theo Garefalakis
category:            Game
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

common common-options
  build-depends:       base ^>= 4.14.0.0
                     , relude
                     , text
                     , attoparsec
                     , containers
                     , unordered-containers
                     , foldl
                     , cryptonite
                     , memory
                     , bytestring
                     , hashable
                     , aeson
                     , scientific
                     , megaparsec
                     , vector
                     , arithmoi
                     , PSQueue
                     , extra
                     , mod
  
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -O2
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       DeriveAnyClass
                       DerivingStrategies
                       DerivingVia
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       ViewPatterns
                       BangPatterns
                       MultiWayIf
                       DataKinds


library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Lib
executable day1
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day1.hs
  build-depends:       AoC2015-Haskell

executable day2
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day2.hs
  build-depends:       AoC2015-Haskell

executable day3
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day3.hs
  build-depends:       AoC2015-Haskell

executable day4
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day4.hs
  build-depends:       AoC2015-Haskell

executable day5
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day5.hs
  build-depends:       AoC2015-Haskell

executable day6
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day6.hs
  build-depends:       AoC2015-Haskell

executable day7
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day7.hs
  build-depends:       AoC2015-Haskell

executable day8
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day8.hs
  build-depends:       AoC2015-Haskell

executable day9
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day9.hs
  build-depends:       AoC2015-Haskell

executable day10
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day10.hs
  build-depends:       AoC2015-Haskell

executable day11
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day11.hs
  build-depends:       AoC2015-Haskell

executable day12
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day12.hs
  build-depends:       AoC2015-Haskell

executable day13
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day13.hs
  build-depends:       AoC2015-Haskell

executable day14
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day14.hs
  build-depends:       AoC2015-Haskell

executable day15
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day15.hs
  build-depends:       AoC2015-Haskell

executable day16
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day16.hs
  build-depends:       AoC2015-Haskell

executable day17
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day17.hs
  build-depends:       AoC2015-Haskell

executable day18
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day18.hs
  build-depends:       AoC2015-Haskell

executable day19
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day19.hs
  build-depends:       AoC2015-Haskell

executable day20
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day20.hs
  build-depends:       AoC2015-Haskell

executable day21
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day21.hs
  build-depends:       AoC2015-Haskell

executable day22
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day22.hs
  build-depends:       AoC2015-Haskell

executable day23
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day23.hs
  build-depends:       AoC2015-Haskell

executable day24
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day24.hs
  build-depends:       AoC2015-Haskell

executable day25
  import:              common-options
  hs-source-dirs:      app
  main-is:             Day25.hs
  build-depends:       AoC2015-Haskell
